# django-admin-boost

./: .gitignore  .pre-commit-config.yaml  DTL_TO_JINJA2_CONVERSION.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tag.yml
0.1.0a1/: 404.html  index.html  sitemap.xml
django_admin_boost/: __init__.py  _redirect.py  annotations.py  mixins.py  paginators.py  query_budget.py  testing.py
django_admin_boost/admin/: __init__.py  actions.py  apps.py  checks.py  decorators.py  filters.py  helpers.py  jinja2_env.py  models.py  (+4 more)
django_adminx/: __init__.py  actions.py  admin.py  apps.py  checks.py  decorators.py  filters.py  helpers.py  jinja2_env.py  jinja2_helpers.py  mixins.py  models.py  options.py  paginators.py  sites.py  utils.py  widgets.py
docs/: index.md
examples/full/: README.md  pyproject.toml  seed.py  settings.py  urls.py
examples/full/catalog/: admin.py  models.py  resources.py  translation.py  unmanaged.py
examples/full/catalog/migrations/: 0001_initial.py
examples/simple/: README.md  pyproject.toml  settings.py
examples/simple/shop/: admin.py
examples/simple/shop/migrations/: 0001_initial.py
main/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_admin_smoke.py  test_annotated_field.py  test_auto_annotate_m2m.py  test_auto_select_related.py  test_boost_dashboard.py  test_boost_views.py  test_code_review_fixes.py  test_contrib_filters.py  test_contrib_forms.py  test_contrib_inlines.py  test_jinja2_admin_views.py  test_jinja2_env.py  test_jinja2_parity.py  test_list_fields_mixin.py  test_list_only_fields.py  test_placeholder_stubs.py  test_query_budget.py  test_smart_paginator.py  test_split_count.py  test_unmanaged.py
(+385 files in other folders)
