[project]
name = "django-admin-boost-example-full"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "django-admin-boost[jinja2]",
  "django-import-export>=4.0",
  "django-modeltranslation>=0.20.2",
]

[tool.uv.sources]
django-admin-boost = { path = "../../", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["catalog"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
