[project]
name = "django-adminx-example-simple"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["django-adminx[jinja2]"]

[tool.uv.sources]
django-adminx = { path = "../../", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["shop"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
