[project]
name = "django-admin-boost-example-simple"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["django-admin-boost[jinja2]"]

[tool.uv.sources]
django-admin-boost = { path = "../../", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["shop"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
